--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p ${PORT:=3000}",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,7 +14,10 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "typescript": "^4.8.3"
   }
 }
